holo theme on android >= 3.0 standard theme on previous versions

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,10 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:orientation="vertical">
+	android:orientation="vertical"
+	android:paddingLeft="10dp"
+	android:paddingRight="10dp"
+	android:paddingTop="10dp">
 
 	<LinearLayout
 		android:layout_width="fill_parent"
@@ -20,8 +23,10 @@
 
 	<Button
 		android:id="@+id/btnStartStop"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="15dp"
+		android:layout_marginBottom="15dp" />
 
 	<CheckBox
 		android:id="@+id/startAtBoot"
